# llm_router

./: .gitignore  README.md  USER_STORIES.md  config.yaml_working  main.py  pyproject.toml  query.sh  requirements.txt  run_server.sh
.github/workflows/: main.yml  python-package.yml
app/: client.py  config.py  dependencies.py  logger.py  pii.py  prompts.py  router.py  state.py
app/utils/: model_grouper.py  model_utils.py
prompts/: mcp_tool_use_prompt.txt  roocode_system_prompt.txt
tests/: __init__.py  test_client.py  test_dashboard.py  test_gemini_client.py  test_main.py  test_openai_client.py  test_pii.py  test_router.py  test_state.py  test_user_isolation.py
